<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home">
        </item>
        <item
            android:id="@+id/nav_internal"
            android:icon="@drawable/folder"
            android:title="@string/internal_storage">
        </item>
        <item
            android:id="@+id/nav_card"
            android:icon="@drawable/card"
            android:title="@string/sd_card">
        </item>
    </group>
    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about">
            </item>
        </menu>
    </item>
</menu>